@@ -1,4 +1,8 @@
 2018-10-12   Kyle Russell <bkylerussell@gmail.com>
+	* src/conflict.c, src/undo.c: Add knowledge of .data.rel.ro for
+	read-only dynamic symbols
+
+2018-10-12   Kyle Russell <bkylerussell@gmail.com>
 	* src/rtld/dl-lookupX.h: Fix rtld segfault when _dl_lookup_symbol_x
 	is NULL on protected symbol relocations
 	* testsuite/Makefile.am, testsuite/reloc12.c, testsuite/reloc12.h,
